@@ -4,7 +4,7 @@ version := "1.0"
 
 organization := "org.dizhang"
 
-scalaVersion := "2.11.8"
+scalaVersion := "2.11.12"
 
 scalacOptions ++= Seq("-unchecked", "-deprecation", "-feature")
 
@@ -20,12 +20,16 @@ libraryDependencies ++= Seq(
 	"org.scalanlp" %% "breeze-natives" % "0.12",
 	"org.scalatest" % "scalatest_2.11" % "2.2.4" % "test",
 	"net.java.dev.jna" % "jna" % "4.2.2",
+  //"com.chuusai" %% "shapeless" % "2.3.3"
 	"org.scalaz" %% "scalaz-core" % "7.2.4"
 )
 
 //resolvers += "Sonatype Snapshots" at "https://oss.sonatype.org/content/repositories/snapshots/"
 resolvers += "Sonatype Releases" at "https://oss.sonatype.org/content/repositories/releases/"
-
+resolvers ++= Seq(
+	Resolver.sonatypeRepo("releases"),
+	Resolver.sonatypeRepo("snapshots")
+)
 assemblyOption in assembly := (assemblyOption in assembly).value.copy(includeScala = false)
 
 assemblyMergeStrategy in assembly := {
@@ -37,6 +41,11 @@ assemblyMergeStrategy in assembly := {
 		oldStrategy(x)
 }
 
+fork in Test := true
+parallelExecution in Test := false
+//testOptions in Test := Seq(Tests.Filter(s => ! s.endsWith("SingleStudySpec")))
+
+javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled")
 assemblyJarName in assembly := "SeqSpark.jar"
 test in assembly := {}
 mainClass in (Compile, run) := Some("org.dizhang.seqspark.SingleStudy")
